// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`User > USER_LOGIN > should handle REQUEST 1`] = `
{
  "isAuthenticated": false,
  "status": "running",
}
`;

exports[`User > USER_LOGIN > should handle SUCCESS 1`] = `
{
  "isAuthenticated": true,
  "status": "ready",
}
`;

exports[`User > USER_LOGOUT > should handle REQUEST 1`] = `
{
  "isAuthenticated": false,
  "status": "running",
}
`;

exports[`User > USER_LOGOUT > should handle SUCCESS 1`] = `
{
  "isAuthenticated": false,
  "status": "idle",
}
`;

exports[`User > should return the initial state 1`] = `
{
  "isAuthenticated": false,
  "status": "idle",
}
`;
